TSM-308 - * removed the open source statement from home page for now until I figure out which license to use * more info on the info page * minor fix to spotlight float / text wrap

--- a/tsm/src/main/webapp/css/main.css
+++ b/tsm/src/main/webapp/css/main.css
@@ -23,6 +23,7 @@
 	}
 	#main {
 	background-color: #FFFFFF;
+  min-width: 855px
 	}
 	#main-pad {
 	height:208px;
@@ -38,15 +39,14 @@
 	padding: 5px 15px 0 15px;
 	}
 	#right {
-	position:relative;
-	top:-40px;
-	padding: 15px 10px 0 10px;
+	position: relative;
+	top:-28px;
+	padding: 0 10px 0 10px;
 	width: 500px;
 	float: right;
 	}
 	#mainpane {
 	width:100%;
-	min-width: 855px
 	}
 	#main p{
 	margin: 0 0 .8em 0;
